app/assets/stylesheets/views/_organisations.scss
.organisations {
  .organisations-list__section {
    margin-bottom: $gutter * 2;
  }

  .organisations__department-count-wrapper {
    @include bold-80;
  }

  .organisations-list__item {
    list-style-type: none;
    padding-bottom: $gutter-half;
    margin-bottom: $gutter-half;
    border-bottom: 1px solid $grey-2;
  }

  .organisation-list__item-title {
    @include core-19;
    margin-right: $gutter-one-third;
  }

  .organisation-list__item-context {
    color: $grey-1;
    white-space: nowrap;
  }

  .organisation-list__item-works-with {
    @include core-16;
    display: block;
    margin-top: $gutter-half;
    margin-right: $gutter-two-thirds;

    @include media(tablet) {
      display: inline-block;
    }
  }

  .organisation-list__works-with-toggle {
    display: none;

    .js-enabled & {
      @include core-16;
      display: inline;
    }
  }

  .organisation-list__works-with {
    background-color: $panel-colour;
    margin-top: $gutter-one-third;
    padding: $gutter-one-third;
  }

  .organisation-list__works-with-title {
    font-size: 16px;
    font-weight: bold;
  }

  .organisation-list__works-with-list {
    margin-bottom: $gutter-half;
  }

  .organisation-list__works-with-list-item {
    padding-bottom: 5px;
  }

  .organisations-list__without-number {
    @include media(tablet) {
      float: right;
    }
  }

  .organisations__no-filter-match {
    display: none;

    .js-enabled & {
      @include core-19;
      display: block;
      text-align: center;
      margin-bottom: $gutter * 2;
    }
  }
}

.filter-organisations-list__form {
  display: none;

  .filter-organisations-list__label {
    @include bold-36;
    margin-right: $gutter-one-third;
  }

  .filter-organisations-list__input {
    @include core-16;
    width: 30%;
    min-width: 150px;
    vertical-align: text-bottom;
    padding: 5px;
    border: 1px solid $grey-2;
    margin: 0 5px 5px 0;
  }
}

.filter-organisations-list__form--active {
  display: block;
  margin-bottom: $gutter * 1.5;
}

.organisations__brand-border-top {
  border-top-width: 5px;
  border-top-style: solid;
}

.organisation__section-border-top {
  border-top: 5px solid $black;
  padding-top: $gutter-half;
}

.organisation__corporate-information .organisation__float-section {
  @include media(tablet) {
    float: right;
  }
}

.organisations__margin-bottom {
  margin-bottom: $gutter-half;

  @include media(tablet) {
    margin-bottom: $gutter;
  }
}

.no10-banner {
  @include core-19;
  padding-top: 140px;
  background-image: image-url('prime-ministers-office-header.jpg');
  background-repeat: no-repeat;
  background-position: 50% 0;
  text-align: center;
}

.organisation__parent-organisations {
  @include core-16;
  margin-top: $gutter-half;
}

.organisation__address {
  font-style: normal;
}

.organisation__border-top {
  border-top: 1px solid $grey-2;
  margin-top: $gutter-half;
}

.organisation__contact-number {
  margin-bottom: $gutter-one-third;
}

